--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Assignment</title>
+  <title>part 1: Serving Web Content</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link href="./bootstrap-4.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./assets/icons/fontawesome-free-5.15.3-web/css/all.css" rel="stylesheet">
@@ -16,12 +16,13 @@
 
 </head>
 
-<body>
-  <div class="container" style="margin-top:50px">
+<body style="background-image: url('ind.jpg');background-repeat: no-repeat;background-attachment: fixed;
+  background-size: cover;">
+  <div class="container" style="margin-top:20px">
 
 
-    <div class="card  w-50" style="display: block;margin: auto;">
-      <div class="card-header">
+    <div class="card  w-90" style="display: block;margin: auto; ">
+      <div class="card-header" style="background-color: orange" >
         Login
       </div>
       <div class="card-body">
@@ -29,16 +30,16 @@
           
           <div class="mb-3">
             <label for="userEmail" class="form-label">Email</label>
-            <input type="email" class="form-control" id="userEmail" placeholder="Enter email" required>
+            <input type="email" class="form-control" id="userEmail" placeholder="Enter email address" required>
           </div>
           <div class="mb-3">
             <label for="userPassword" class="form-label">Password</label>
             <input type="number" class="form-control" id="userPassword" placeholder="Enter 4 digit pin" required>
           </div>
 
-          <p  class="btn btn-success mb-3"
+          <p  class="btn btn-success mb-3"style="color: #FFA500;
             onClick="login()">Login</p>
-            <p class="btn btn-success mb-3"><a href="register.html" style="color: #fff;text-decoration: none;" >Register</a></p>
+            <p class="btn btn-success mb-3"><a href="register.html" style="color: #FFA500;text-decoration: none;" >Register</a></p>
            
       </div>
     </div>
@@ -58,5 +59,9 @@
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"></script>
 </body>
+<P><i>
+  this is a web app
+</i>
+</P>
 
 </html>
