--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -37,8 +37,8 @@
             <input type="number" class="form-control" id="userPassword" placeholder="Enter 4 digit pin" required>
           </div>
 
-          <p  class="btn btn-success mb-3"style="color: #FFA500;
-            onClick="login()">Login</p>
+          <p  class="btn btn-success mb-3" style="color: #FFA500;"
+             onClick="login()">Login</p>
             <p class="btn btn-success mb-3"><a href="register.html" style="color: #FFA500;text-decoration: none;" >Register</a></p>
            
       </div>
@@ -59,9 +59,6 @@
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"></script>
 </body>
-<P><i>
-  this is a web app
-</i>
-</P>
+
 
 </html>
